Fri May 27 17:18:00 2005  Manish Singh  <yosh@gimp.org>

	* glib/goption.c (parse_short_option): initialize option_name
	before using it.

2005-05-27  Matthias Clasen  <mclasen@redhat.com>

	* glib/goption.c (parse_short_option, parse_long_option):
	Return an error if an option is missing its argument.  (#305576,
	Björn Lindqvist)

	* tests/option-test.c (missing_arg_test): Add a testcase.

Wed May 25 15:33:51 2005  Manish Singh  <yosh@gimp.org>

	* glib/goption.c (print_help): rest_description should be const.

2005-05-25  Matthias Clasen  <mclasen@redhat.com>

	* glib/gunidecomp.c (combine_hangul): Don't eat Hangul 
	when normalizing.  (#301742, reported by Christian Biere,
	patch by Noah Levitt)

2005-05-24  Matthias Clasen  <mclasen@redhat.com>

	* glib/goption.c (print_help): If the remaining argument
	has an arg_description, display the synopsis as
	PROGNAME [OPTION...] REST  (#305346, Noah Levitt)

2005-05-20  Federico Mena Quintero  <federico@ximian.com>

	Merged from glib-2-6:

	* glib/gspawn.c (g_spawn_command_line_sync): Clarify the meaning
	of exit_status(); it's not the return code from the child, but
	rather the waitpid() status.

2005-05-18  Matthias Clasen  <mclasen@redhat.com>

	* glib/gunidecomp.c: Correct the end of the Hangul 
	Syllables range, from 0xd7af to 0xd7a3, in several
	places.  (#301984, Changwoo Ryu)

2005-05-17  Matthias Clasen  <mclasen@redhat.com>

	* tests/tree-test.c (main): Check the return values of
	g_tree_remove().

	* glib/gtree.c (g_tree_remove, g_tree_steal): Return
	a boolean indicating wether the key was found.  (#302545,
	Matthew F. Barnes)

2005-05-06  Brian Cameron  <brian.cameron@sun.com>

	* configure.in, gmodule-no-export-2.0-uninstalled.pc.in,
	  Makefile.am:  Added gmodule-no-export-2.0-uninstalled.pc.in
	  to allow building of other libraries like pango when 
	  glib is uninstalled.

2005-05-06  Matthias Clasen  <mclasen@redhat.com>

	* tests/option-test.c: Add a testcase.
	