@@ -1,3 +1,11 @@
+2005-06-08  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/glib.symbols: 
+	* glib/gunicode.h: 
+	* glib/gunicollate.c (g_utf8_collate_key_for_filename): 
+	New function to calculate collation keys which are more
+	suitable for sorting filenames.  (#172690, Ole Laursen)
+
 Fri May 27 17:18:00 2005  Manish Singh  <yosh@gimp.org>
 
 	* glib/goption.c (parse_short_option): initialize option_name
